aws_cluster/Orthanc/orthanc_kube_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orthanc
  template:
    metadata:
      labels:
        app: orthanc
    spec:
      containers:
      - name: orthanc
        image: 325852638497.dkr.ecr.us-east-1.amazonaws.com/manual_gui_ecr:orthanc_test
        imagePullPolicy: Always
        ports:
        - containerPort: 8026
        - containerPort: 4026
        volumeMounts:
        - name: data-volume
          mountPath: /etc/orthanc
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
      automountServiceAccountToken: false
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: data-pvc
