aws_cluster/Orthanc/orthanc_kube_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orthanc-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: orthanc
  ports:
  - protocol: TCP
    port: 8026
    targetPort: 8026
    name: orthanc-http-port
  - protocol: TCP
    port: 4026
    targetPort: 4026
    name: orthanc-dicom-port
