aws_cluster/Orthanc/orthanc_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orthanc-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/success-codes: 200,301
spec:
  ingressClassName: alb
  rules:
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orthanc-service
                port:
                  number: 8026
